[package]
authors = ["Junfeng Liu <china.liujunfeng@gmail.com>"]
categories = ["graphics"]
description = "Parallel image convolution on GPU."
edition = "2018"
license = "MIT"
name = "image-convolution"
repository = "https://github.com/J-F-Liu/image-convolution"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.5.0"
futures = {version = "0.3", default-features = false, features = ["std", "executor"]}
image = "0.23"
wgpu = "0.8"

[dev-dependencies]
structopt = "0.3.21"
